--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -57,5 +57,5 @@ jobs:
 
       # Deploy the images
       - name: Deploy
-        if: ${{ env.DOCKER_PASSWORD != '' && env.GHCR_PASSWORD != '' }}
+        if: ${{env.GHCR_PASSWORD != '' }}
         run: ./deploy.sh
