Update environment variables in build workflow
Set DISTRO_TO_BUILD and TARGETPLATFORM to specific values.

--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -31,8 +31,8 @@ jobs:
           linux/amd64
         ]
     env:
-      DISTRO_TO_BUILD: ${{ matrix.distro_to_build }}
-      TARGETPLATFORM: ${{ matrix.targetplatform }}
+      DISTRO_TO_BUILD: ubuntu-24.04
+      TARGETPLATFORM: linux/amd64
       REPO: crops/yocto
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
