Change repository name in CI workflow

--- a/.github/workflows/build-test-deploy.yml
+++ b/.github/workflows/build-test-deploy.yml
@@ -33,7 +33,7 @@ jobs:
     env:
       DISTRO_TO_BUILD: ubuntu-24.04
       TARGETPLATFORM: linux/amd64
-      REPO: crops/yocto
+      REPO: south-polar-bear
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
       GHCR_USERNAME: ${{ github.actor }}
